--- a/educacion.html
+++ b/educacion.html
@@ -15,7 +15,7 @@
 		<h2>Edad:</h2><h3>23 años.</h3>
 		<h2>País/ ciudad:</h2><h3>Buenos Aires, Argentina.</h3><br/>
 	<h3><u>Enlaces:</u></h3>
-		<a href="/">Volver al inicio.</a>
+		<a href="final.html">Inicio.</a>
 		<a href="educacion.html">Educación.</a>
 		<a href="experiencia.html">Experiencia.</a><br/>
 		<h2>Educación:</h2>
