--- a/experiencia.html
+++ b/experiencia.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<title>Experiencia</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
 		<h2>Edad:</h2><h3>23 años.</h3>
 		<h2>País/ ciudad:</h2><h3>Buenos Aires, Argentina.</h3><br/>
 	<h3><u>Enlaces:</u></h3>
-		<a href="/">Volver al inicio.</a>
+		<a href="final.html">Inicio.</a>
 		<a href="educacion.html">Educación.</a>
 		<a href="experiencia.html">Experiencia.</a><br/>
 	<h1><u>Experiencia.</u></h1><br/>
@@ -27,14 +28,16 @@
 		<img src="carrefour-1.svg" width="100px"></img>
 	</ul>
 	<h2>Experiencia y habilidades:</h2><p>(colgue otro video debido a que no tengo forma de grabarlo.</p>
-	<iframe width="640" height="360" src="https://www.youtube.com/embed/dDOqUYh9eo4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><br/><br/><br/>
-	<h2>Audio de experiencias:</h2><p>colgue una cancion por lo mismo de antes.</p>
+	<video controls width="400px">
+		<source src="expvideo.mp4" name="video" type="video/mp4">
+	</video>
+	<h2>Audio de experiencias:</h2>
 	<audio controls>
-		<source src="comfortablynumb.mp3" type="audio/mp3">
+		<source src="lz.mp3" type="audio/mp3">
 	</audio>
 </body>
-<footer>
-	<strong>Christian Walsh 10/08/2018.</strong><footer>
+	<footer>
+	<strong>Christian Walsh 10/08/2018.</strong>
 		<p>contacto:walshchristian95@hotmail.com &nbsp;&nbsp; telefono:11552233</p>
 	</footer>
 </html>
