--- a/educacion.html
+++ b/educacion.html
@@ -50,10 +50,11 @@
 			</tr>
 		</tbody>
 	</table><br/>
+	<form>
 	<fieldset>	
 		<legend><h1>Agregar estudios.</h1></legend>
-			<label for="institución">Institución:</label><br/>
-				<input title="institucion" type="text" name="name" required><br/><br/>
+			<label for="name">institucion:</label><br/>
+				<input title="nombre" type="text" name="name" required/><br/><br/>
 			<label for="textarea">Lugar:</label><br/>
 				<textarea name="lugar" rows="5" cols="20"></textarea><br/><br/>
 				<label for="year">Año:</label>&nbsp;&nbsp;&nbsp;
@@ -79,6 +80,7 @@
 		</select><br/><br/>
 			<button type="submit">Enviar</button>
 	</fieldset>
+	</form>
 </body>
 <footer>
 	<strong>Christian Walsh 10/08/2018.</strong><footer>
