--- a/experiencia.html
+++ b/experiencia.html
@@ -33,7 +33,7 @@
 	</video>
 	<h2>Audio de experiencias:</h2>
 	<audio controls>
-		<source src="lz.mp3" type="audio/mp3">
+		<source src="audi1.mp3" type="audio/mp3">
 	</audio>
 </body>
 	<footer>
